--- a/Assignment_6.ipynb
+++ b/Assignment_6.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMogarfwHxdmu7N/q8fmKBR",
+      "authorship_tag": "ABX9TyPWK/Wp+TwjTPX6eqkOMtxa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -96,81 +96,77 @@
       "source": [
         "#TIY 5-2\n",
         "\n",
-        "bird = \"flying rat\"\n",
-        "print(\"Is bird == 'pigeon'? I predict False\")\n",
-        "print(bird == \"pigeon\")\n",
+        "name_1 = \"Kayla\"\n",
+        "name_2 = \"Caila\"\n",
+        "name_3 = \"Cala\"\n",
         "\n",
-        "print(\"\\nIs bird == 'Flying Rat'.lower()? I predict True\")\n",
-        "print(bird == \"Flying Rat\".lower())\n",
+        "#Equality of strings\n",
         "\n",
-        "num = 4\n",
-        "print(\"\\nIs num == 4? I predict True\")\n",
-        "print(num == 4)\n",
+        "if (name_1 == name_3):\n",
+        "    print(\"Equal!\")\n",
+        "else:\n",
+        "    print(\"Unequal!\")\n",
         "\n",
-        "print(\"\\nIs num <= 4? I predict True\")\n",
-        "print(num <= 4)\n",
+        "# Inequality of strings\n",
         "\n",
-        "print(\"\\nIs num > 4? I predict False\")\n",
-        "print(num > 4)\n",
+        "if(name_1 != name_2):\n",
+        "    print(\"The names are unequal\")\n",
+        "else:\n",
+        "    print(\"The names are equal\")\n",
         "\n",
-        "print(\"\\nIs num != 4? I predict False\")\n",
-        "print(num != 4)\n",
+        "# Numerical tests\n",
         "\n",
-        "print(\"\\nIs num <= 5 and num >= -5? I predict True\")\n",
-        "print(num <= 5 and num >= -5)\n",
+        "age_1 = 18\n",
         "\n",
-        "print(\"\\nIs num > 6 or num < -6? I predict False\")\n",
-        "print(num > 6 or num < -6)\n",
+        "age_2 = 23\n",
         "\n",
-        "randomList = [\"pigeon\", \"cat\", \"doggo\", \"rat\", \"fat dino\", \"crazy jay\"]\n",
-        "print(\"\\nIs cat in randomList? I predict True\")\n",
-        "print(f\"{'cat' in randomList}\")\n",
+        "if (age_1 ==18):\n",
+        "    print(\"Person is eligible to vote\")\n",
         "\n",
-        "print(\"\\nIs cow not in randomList? I predict True\")\n",
-        "print(f\"{'cow' not in randomList}\")\n"
+        "if(age_1 != 23):\n",
+        "          print(\"Person cannot drink\")\n",
+        "\n",
+        "if(age_1 <= age_2):\n",
+        "    print(\"Yonger\")\n",
+        "\n",
+        "if(age_2 >= age_1):\n",
+        "    print(\"Older\")\n",
+        "\n",
+        "# and/or keyword test\n",
+        "if (age_1 ==18 or age_23>=23):\n",
+        "    print(\"Person is eligible for voting\")\n",
+        "\n",
+        "if(age_1 ==18 and age_2==23):\n",
+        "    print(\"Age difference is 18 years\")\n",
+        "\n",
+        "## Item in list or not\n",
+        "fruits = ['mango','bananna','peach']\n",
+        "if 'Peach' in fruits:\n",
+        "    print(\"Peach is present in fruits\")\n",
+        "if 'mango' not in fruits:\n",
+        "    print(\"Mango is not present in fruits\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QiVTXXw1a5HG",
-        "outputId": "fa187bb9-71ec-493b-a50c-7f49d5dedc79"
+        "outputId": "97eaa736-c04e-4933-c1a2-076c47a67a26"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Is bird == 'pigeon'? I predict False\n",
-            "False\n",
-            "\n",
-            "Is bird == 'Flying Rat'.lower()? I predict True\n",
-            "True\n",
-            "\n",
-            "Is num == 4? I predict True\n",
-            "True\n",
-            "\n",
-            "Is num <= 4? I predict True\n",
-            "True\n",
-            "\n",
-            "Is num > 4? I predict False\n",
-            "False\n",
-            "\n",
-            "Is num != 4? I predict False\n",
-            "False\n",
-            "\n",
-            "Is num <= 5 and num >= -5? I predict True\n",
-            "True\n",
-            "\n",
-            "Is num > 6 or num < -6? I predict False\n",
-            "False\n",
-            "\n",
-            "Is cat in randomList? I predict True\n",
-            "True\n",
-            "\n",
-            "Is cow not in randomList? I predict True\n",
-            "True\n"
+            "Unequal!\n",
+            "The names are unequal\n",
+            "Person is eligible to vote\n",
+            "Person cannot drink\n",
+            "Yonger\n",
+            "Older\n",
+            "Person is eligible for voting\n",
+            "Age difference is 18 years\n"
           ]
         }
       ]
@@ -211,7 +207,7 @@
         "id": "TshPfVSMpYUR",
         "outputId": "5cb97396-4907-4099-cb01-86c1be247aec"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -254,7 +250,7 @@
         "id": "ow5JvvHarm4K",
         "outputId": "950f9743-5a8e-42c5-f89e-34eaca617377"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,7 +290,7 @@
         "id": "-mzmnEiwswE1",
         "outputId": "88b58198-266d-4111-eaf0-c1b36fbfd5eb"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
