--- a/Assignment_6.ipynb
+++ b/Assignment_6.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWK/Wp+TwjTPX6eqkOMtxa",
+      "authorship_tag": "ABX9TyNVVt02MPaDuWhwa89PYf2V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "A2jkl1eSYp5H",
-        "outputId": "c00c2132-4864-4062-e9ef-799e600b6cee"
+        "outputId": "f791f9e0-bf8e-46bf-8c87-1cc65217641d"
       },
       "outputs": [
         {
@@ -43,52 +43,34 @@
           "text": [
             "False\n",
             "False\n",
+            "True\n",
             "False\n",
-            "True\n",
-            "True\n",
-            "False\n"
+            "False\n",
+            "False\n",
+            "True\n"
           ]
         }
       ],
       "source": [
         "#TIY 5-1\n",
         "\n",
-        "car = \"nissan\"\n",
+        "#1\n",
+        "print(car==\"jeep\")\n",
+        "print(morning==\"bad\")\n",
+        "print(morning==\"good\")\n",
+        "\n",
+        "print((car==\"nissan\") and (morning==\"bad\"))\n",
+        "print((car==\"jeep\") and (morning==\"bad\"))\n",
+        "\n",
+        "car = \"honda\"\n",
         "morning = \"good\"\n",
         "\n",
         "print(car==\"toyota\")\n",
         "\n",
+        "car = \"tesla\"\n",
+        "morning = \"good\"\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "print(car==\"jeep\")\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "print(morning==\"bad\")\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "print(morning==\"good\")\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "print((car==\"nissan\") and (morning==\"good\"))\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "print((car==\"kia\") and (morning==\"bad\"))\n",
-        "\n",
-        "\n"
+        "print(car==\"tesla\")"
       ]
     },
     {
@@ -101,41 +83,33 @@
         "name_3 = \"Cala\"\n",
         "\n",
         "#Equality of strings\n",
-        "\n",
         "if (name_1 == name_3):\n",
         "    print(\"Equal!\")\n",
         "else:\n",
         "    print(\"Unequal!\")\n",
         "\n",
         "# Inequality of strings\n",
-        "\n",
         "if(name_1 != name_2):\n",
         "    print(\"The names are unequal\")\n",
         "else:\n",
         "    print(\"The names are equal\")\n",
         "\n",
         "# Numerical tests\n",
-        "\n",
         "age_1 = 18\n",
-        "\n",
         "age_2 = 23\n",
         "\n",
         "if (age_1 ==18):\n",
         "    print(\"Person is eligible to vote\")\n",
-        "\n",
         "if(age_1 != 23):\n",
         "          print(\"Person cannot drink\")\n",
-        "\n",
         "if(age_1 <= age_2):\n",
         "    print(\"Yonger\")\n",
-        "\n",
         "if(age_2 >= age_1):\n",
         "    print(\"Older\")\n",
         "\n",
         "# and/or keyword test\n",
         "if (age_1 ==18 or age_23>=23):\n",
         "    print(\"Person is eligible for voting\")\n",
-        "\n",
         "if(age_1 ==18 and age_2==23):\n",
         "    print(\"Age difference is 18 years\")\n",
         "\n",
@@ -178,25 +152,12 @@
         "\n",
         "alien_color = \"green\"\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
         "if (alien_color==\"green\"):\n",
         "    print(\"Player earned 5 points.\")\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
         "\n",
         "# 2nd version of this program.\n",
         "\n",
         "alien_color2 = \"red\"\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
         "if (alien_color2==\"green\"):\n",
         "    print(\"Player earned 5 points.\")\n"
       ],
@@ -205,9 +166,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TshPfVSMpYUR",
-        "outputId": "5cb97396-4907-4099-cb01-86c1be247aec"
+        "outputId": "b6fa45fc-1ca0-4830-8f98-dcd7050bf3d1"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,8 +186,6 @@
         "\n",
         "age = 20\n",
         "\n",
-        "\n",
-        "\n",
         "if age<2:\n",
         "    print(\"You are a baby.\")\n",
         "elif ((age>2) and (age<=4)):\n",
@@ -238,19 +197,16 @@
         "elif ((age>20) and (age<=65)):\n",
         "    print(\"You are an adult.\")\n",
         "elif (age>65):\n",
-        "    print(\"You are an elder.\")\n",
-        "\n",
-        "\n",
-        "\n"
+        "    print(\"You are an elder.\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ow5JvvHarm4K",
-        "outputId": "950f9743-5a8e-42c5-f89e-34eaca617377"
+        "outputId": "fbcd6a3f-194b-4c66-ab7b-0ca1b5a166ea"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -309,15 +265,54 @@
       "cell_type": "code",
       "source": [
         "#TIY 5-13\n",
+        " #Creating a website where people are able to ask me certain questions to learn! (EXAMPLE)\n",
         "\n",
-        "After being able to learn a bit of programming now, Im personally interested in wanting to create websites that may contain things like\n",
-        "my portfolio or my own personal website of content I wish to share."
+        " # Define a list of your top favorite things\n",
+        "favorite_things = [\n",
+        "    \"Playing my Nintendo Switch\",\n",
+        "    \"Watching Anime\",\n",
+        "    \"Spending time with family and friends\",\n",
+        "    \"Listening to music\",\n",
+        "    \"Eating delicious food (Wendyss)\",\n",
+        "    \"Going to the movies with friends or alone\",\n",
+        "    \"Having me time\",\n",
+        "    \"Going on walks (when the weather is nice)\",\n",
+        "    \"Taking photos\",\n",
+        "    \"Coding and programming (duhhh)\"\n",
+        "]\n",
+        "\n",
+        "# Print the list of favorite things\n",
+        "print(\"My Top Favorite Things:\")\n",
+        "for idx, thing in enumerate(favorite_things, start=1):\n",
+        "    print(f\"{idx}. {thing}\")\n"
       ],
       "metadata": {
-        "id": "rTW5wAaG-UTP"
+        "id": "rTW5wAaG-UTP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "414ce3e0-1b48-4edc-8a17-4a565fc8202f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "My Top Favorite Things:\n",
+            "1. Playing my Nintendo Switch\n",
+            "2. Watching Anime\n",
+            "3. Spending time with family and friends\n",
+            "4. Listening to music\n",
+            "5. Eating delicious food (Wendyss)\n",
+            "6. Going to the movies with friends or alone\n",
+            "7. Having me time\n",
+            "8. Going on walks (when the weather is nice)\n",
+            "9. Taking photos\n",
+            "10. Coding and programming (duhhh)\n"
+          ]
+        }
+      ]
     }
   ]
 }
