--- a/Assignment_12_Part_II.ipynb
+++ b/Assignment_12_Part_II.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgilgI1/1LO2R5kV/Hlg46",
+      "authorship_tag": "ABX9TyNPSijVqQXAq8sNWZHDBqra",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,78 +28,114 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "source": [
+        "#PART 1\n",
+        "\n",
+        "class Money:\n",
+        "    def __init__(self, value):\n",
+        "        self.value = value\n",
+        "\n",
+        "    def __repr__(self):\n",
+        "        return f\"{self.__class__.__name__}({self.value})\"\n",
+        "\n",
+        "\n",
+        "class Bills(Money):\n",
+        "    pass\n",
+        "\n",
+        "\n",
+        "class Coins(Money):\n",
+        "    pass\n",
+        "\n",
+        "\n",
+        "class One(Bills):\n",
+        "    def __init__(self):\n",
+        "        super().__init__(1)\n",
+        "\n",
+        "\n",
+        "class Five(Bills):\n",
+        "    def __init__(self):\n",
+        "        super().__init__(5)\n",
+        "\n",
+        "\n",
+        "class Ten(Bills):\n",
+        "    def __init__(self):\n",
+        "        super().__init__(10)\n",
+        "\n",
+        "\n",
+        "class Twenty(Bills):\n",
+        "    def __init__(self):\n",
+        "        super().__init__(20)\n",
+        "\n",
+        "\n",
+        "class Penny(Coins):\n",
+        "    def __init__(self):\n",
+        "        super().__init__(0.01)\n",
+        "\n",
+        "\n",
+        "class Nickel(Coins):\n",
+        "    def __init__(self):\n",
+        "        super().__init__(0.05)\n",
+        "\n",
+        "\n",
+        "class Money:\n",
+        "    def __init__(self, value):\n",
+        "        self.value = value\n",
+        "\n",
+        "    def __repr__(self):\n",
+        "        return f\"{self.__class__.__name__}({self.value})\"\n",
+        "\n",
+        "\n",
+        "class Wallet:\n",
+        "    def __init__(self):\n",
+        "        self.money = []\n",
+        "\n",
+        "    def add_money(self, money):\n",
+        "        self.money.append(money)\n",
+        "\n",
+        "    def total_value(self):\n",
+        "        return sum(item.value for item in self.money)\n",
+        "\n",
+        "    def __repr__(self):\n",
+        "        return f\"Wallet({self.money})\"\n",
+        "\n",
+        "\n",
+        "# Test cases\n",
+        "if __name__ == \"__main__\":\n",
+        "    # Creating test wallet\n",
+        "    wallet = Wallet()\n",
+        "    wallet.add_money(Money(1))  # One Dollar Bill\n",
+        "    wallet.add_money(Money(5))  # Five Dollar Bill\n",
+        "    wallet.add_money(Money(10))  # Ten Dollar Bill\n",
+        "    wallet.add_money(Money(20))  # Twenty Dollar Bill\n",
+        "    wallet.add_money(Money(0.01))  # Penny\n",
+        "    wallet.add_money(Money(0.05))  # Nickel\n",
+        "    wallet.add_money(Money(0.10))  # Dime\n",
+        "    wallet.add_money(Money(0.25))  # Quarter\n",
+        "\n",
+        "    # Printing wallet content\n",
+        "    print(wallet)\n",
+        "\n",
+        "    # Calculating total value\n",
+        "    print(\"Total value:\", wallet.total_value())\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "dzATI43cGK3U",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "72ba1cd1-afbc-490a-ade9-22cedd4da9f2"
+        "id": "Jhl8doZbrIHC",
+        "outputId": "9380623c-2b61-4fb3-b3a0-9a36e126b4e9"
       },
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Rectangle:\n",
-            "Area: 20\n",
-            "Perimeter: 18\n",
-            "\n",
-            "Circle:\n",
-            "Area: 28.27\n",
-            "Circumference: 18.85\n"
+            "Wallet([Money(1), Money(5), Money(10), Money(20), Money(0.01), Money(0.05), Money(0.1), Money(0.25)])\n",
+            "Total value: 36.41\n"
           ]
         }
-      ],
-      "source": [
-        "#Colab Your Own Design\n",
-        "\n",
-        "import math\n",
-        "\n",
-        "class Shape:\n",
-        "    def area(self):\n",
-        "        pass\n",
-        "\n",
-        "    def perimeter(self):\n",
-        "        pass\n",
-        "\n",
-        "\n",
-        "class Rectangle(Shape):\n",
-        "    def __init__(self, length, width):\n",
-        "        self.length = length\n",
-        "        self.width = width\n",
-        "\n",
-        "    def area(self):\n",
-        "        return self.length * self.width\n",
-        "\n",
-        "    def perimeter(self):\n",
-        "        return 2 * (self.length + self.width)\n",
-        "\n",
-        "\n",
-        "class Circle(Shape):\n",
-        "    def __init__(self, radius):\n",
-        "        self.radius = radius\n",
-        "\n",
-        "    def area(self):\n",
-        "        return math.pi * self.radius ** 2\n",
-        "\n",
-        "    def perimeter(self):\n",
-        "        return 2 * math.pi * self.radius\n",
-        "\n",
-        "\n",
-        "# Test cases\n",
-        "if __name__ == \"__main__\":\n",
-        "    rectangle = Rectangle(5, 4)\n",
-        "    circle = Circle(3)\n",
-        "\n",
-        "    print(\"Rectangle:\")\n",
-        "    print(\"Area:\", rectangle.area())\n",
-        "    print(\"Perimeter:\", rectangle.perimeter())\n",
-        "\n",
-        "    print(\"\\nCircle:\")\n",
-        "    print(\"Area:\", round(circle.area(), 2))\n",
-        "    print(\"Circumference:\", round(circle.perimeter(), 2))\n",
-        "\n"
       ]
     },
     {
@@ -159,7 +195,7 @@
         "id": "vzsAARKXxIGD",
         "outputId": "2d4b8171-636c-4d31-8bf1-ed71111b5c96"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
