--- a/Assignment_9_10.ipynb
+++ b/Assignment_9_10.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOavhoWOiMF0u1Kn2Gyk7rc",
+      "authorship_tag": "ABX9TyM4+blsp6r2aXrlXcOFOJT5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
       "metadata": {
         "id": "MV9BdGid90iE"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "7Gv3FTJ3GAxW"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -107,7 +107,7 @@
       "metadata": {
         "id": "N0-5YzNnAvCe"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -138,7 +138,7 @@
       "metadata": {
         "id": "AtrmbJn3Gkv_"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -172,7 +172,7 @@
         "id": "rXYo-ssrHoW-",
         "outputId": "f2d4b755-0ce2-435b-d498-273ff6c3effe"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,19 +266,175 @@
       "metadata": {
         "id": "2s7qbPkRG1Fl"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# One more function..."
+        "#TIY 9-6\n",
+        "\n",
+        "class Restaurant():\n",
+        "    \"\"\"A class representing a restaurant.\"\"\"\n",
+        "\n",
+        "    def __init__(self, name, cuisine_type):\n",
+        "        \"\"\"Initialize the restaurant.\"\"\"\n",
+        "        self.name = name.title()\n",
+        "        self.cuisine_type = cuisine_type\n",
+        "        self.number_served = 0\n",
+        "\n",
+        "    def describe_restaurant(self):\n",
+        "        \"\"\"Display a summary of the restaurant.\"\"\"\n",
+        "        msg = self.name + \" serves wonderful \" + self.cuisine_type + \".\"\n",
+        "        print(\"\\n\" + msg)\n",
+        "\n",
+        "    def open_restaurant(self):\n",
+        "        \"\"\"Display a message that the restaurant is open.\"\"\"\n",
+        "        msg = self.name + \" is open. Welcome!\"\n",
+        "        print(\"\\n\" + msg)\n",
+        "\n",
+        "    def set_number_served(self, number_served):\n",
+        "        \"\"\"Allow user to set the number of customers that have been served.\"\"\"\n",
+        "        self.number_served = number_served\n",
+        "\n",
+        "    def increment_number_served(self, additional_served):\n",
+        "        \"\"\"Allow user to increment the number of customers served.\"\"\"\n",
+        "        self.number_served += additional_served\n",
+        "\n",
+        "\n",
+        "class IceCreamStand(Restaurant):\n",
+        "    \"\"\"Represent an ice cream stand.\"\"\"\n",
+        "\n",
+        "    def __init__(self, name, cuisine_type='ice_cream'):\n",
+        "        \"\"\"Initialize an ice cream stand.\"\"\"\n",
+        "        super().__init__(name, cuisine_type)\n",
+        "        self.flavors = []\n",
+        "\n",
+        "    def show_flavors(self):\n",
+        "        \"\"\"Display the flavors available.\"\"\"\n",
+        "        print(\"\\nWe have the following flavors available:\")\n",
+        "        for flavor in self.flavors:\n",
+        "            print(\"- \" + flavor.title())\n",
+        "\n",
+        "yummy_stand = IceCreamStand('The Yummy Stand')\n",
+        "yummy_stand.flavors = ['vanilla', 'chocolate', 'mint']\n",
+        "\n",
+        "yummy_stand.describe_restaurant()\n",
+        "yummy_stand.show_flavors()"
       ],
       "metadata": {
-        "id": "u9RDhbLCG1cF"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FVkiczh3Bijr",
+        "outputId": "16ca7edf-a105-4054-fcae-c405d3a9c08d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "The Yummy Stand serves wonderful ice_cream.\n",
+            "\n",
+            "We have the following flavors available:\n",
+            "- Vanilla\n",
+            "- Chocolate\n",
+            "- Mint\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#TIY 9-7\n",
+        "\n",
+        "class User():\n",
+        "    \"\"\"Represent a simple user profile.\"\"\"\n",
+        "\n",
+        "    def __init__(self, first_name, last_name, username, email, location):\n",
+        "        \"\"\"Initialize the user.\"\"\"\n",
+        "        self.first_name = first_name.title()\n",
+        "        self.last_name = last_name.title()\n",
+        "        self.username = username\n",
+        "        self.email = email\n",
+        "        self.location = location.title()\n",
+        "        self.login_attempts = 0\n",
+        "\n",
+        "    def describe_user(self):\n",
+        "        \"\"\"Display a summary of the user's information.\"\"\"\n",
+        "        print(\"\\n\" + self.first_name + \" \" + self.last_name)\n",
+        "        print(\"  Username: \" + self.username)\n",
+        "        print(\"  Email: \" + self.email)\n",
+        "        print(\"  Location: \" + self.location)\n",
+        "\n",
+        "    def greet_user(self):\n",
+        "        \"\"\"Display a personalized greeting to the user.\"\"\"\n",
+        "        print(\"\\nWelcome back, \" + self.username + \"!\")\n",
+        "\n",
+        "    def increment_login_attempts(self):\n",
+        "        \"\"\"Increment the value of login_attempts.\"\"\"\n",
+        "        self.login_attempts += 1\n",
+        "\n",
+        "    def reset_login_attempts(self):\n",
+        "        \"\"\"Reset login_attempts to 0.\"\"\"\n",
+        "        self.login_attempts = 0\n",
+        "\n",
+        "\n",
+        "class Admin(User):\n",
+        "    \"\"\"A user with administrative privileges.\"\"\"\n",
+        "\n",
+        "    def __init__(self, first_name, last_name, username, email, location):\n",
+        "        \"\"\"Initialize the admin.\"\"\"\n",
+        "        super().__init__(first_name, last_name, username, email, location)\n",
+        "        self.privileges = []\n",
+        "\n",
+        "    def show_privileges(self):\n",
+        "        \"\"\"Display the privileges this administrator has.\"\"\"\n",
+        "        print(\"\\nPrivileges:\")\n",
+        "        for privilege in self.privileges:\n",
+        "            print(\"- \" + privilege)\n",
+        "\n",
+        "\n",
+        "kayla = Admin('kayla', 'lester', 'k_lest001', 'klest001@plattsburgh.edu', 'new york')\n",
+        "kayla.describe_user()\n",
+        "\n",
+        "kayla.privileges = [\n",
+        "    'Designs student publications',\n",
+        "    'Photography ',\n",
+        "    'Sleeping in',\n",
+        "    ]\n",
+        "\n",
+        "kayla.show_privileges()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "psiGASYDB9vC",
+        "outputId": "b9f88a9b-fb14-4aa4-b642-195680683b2e"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Kayla Lester\n",
+            "  Username: k_lest001\n",
+            "  Email: klest001@plattsburgh.edu\n",
+            "  Location: New York\n",
+            "\n",
+            "Privileges:\n",
+            "- Designs student publications\n",
+            "- Photography \n",
+            "- Sleeping in\n"
+          ]
+        }
+      ]
     }
   ]
 }
